src/snapshots/afrotd__parser__tests__rule_1.1.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 1
  - 3
title: Sieger und Endergebnis
text: "\ta) Jedem Team müssen regelgerecht erzielte Punkte zuerkannt werden. Am Ende des Spieles hat das Team mit der höheren Punktzahl gewonnen, sofern das Spiel nicht abgebrochen wird.\n\tb) Wenn der Referee erklärt, dass das Spiel beendet ist, ist der Punktestand endgültig."
interpretations: []
