src/snapshots/afrotd__parser__tests__rule_1.1.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 1
  - 5
title: Team Captains
text: Jedes Team soll dem Referee nicht mehr als vier Teammitglieder als Team Captains benennen. Es soll jeweils nur ein Team Captain für sein Team in allen Belangen mit den Schiedsrichtern sprechen.
interpretations: []
