src/snapshots/afrotd__parser__tests__rule_1.1.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 1
  - 8
title: Ausnahme-Regelungen
text: "Ausnahmen für den Spielbetrieb von Damen-, Jugend-, Hochschul- und Schüler-Mannschaften sowie in Aufbauligen werden durch die jeweils gültige BSO geregelt."
interpretations: []
