src/snapshots/afrotd__parser__tests__rule_1.2.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 2
  - 3
title: Limit Lines (Grenzlinien)
text: "\ta) Vier Meter außerhalb der Seiten- und Endlinien können sich gestrichelte Grenzlinien befinden, ausgenommen in Stadien, in denen das der bauliche Zustand nicht zulässt. In diesen Stadien sollen die Grenzlinien sich nicht weniger als 2 m von den Seiten- und Endlinien entfernt befinden. Die Grenzlinien sollen 10 cm breit und von gelber Farbe sein. Die Teamzone soll mit einer durchgezogenen Linie markiert werden.\n\tb) Keine Person außerhalb der Teamzonen darf sich innerhalb der Grenzlinien aufhalten. Das Heimteammanagement muss nicht autorisierte Personen von dort entfernen. (Ausnahme: Bediener von Handkameras unter der Aufsicht der Televisionspartner dürfen sich kurzzeitig zwischen den Grenzlinien und der Seitenlinie aufhalten, nachdem der Ball dead wurde. Diese Ausnahme erlaubt zu keiner Zeit Kameras auf dem Spielfeld oder in den Endzonen).\n\tc) Es wird empfohlen, diese Grenzlinien im Abstand von 2 m um die gesamte Teamzone herum zu ziehen, wenn es das Stadion zulässt."
interpretations: []
