src/snapshots/afrotd__parser__tests__rule_1.2.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 2
  - 4
title: Teamzone und Coaching Box
text: "\ta) Auf jeder Seite des Spielfeldes soll innerhalb der Grenzlinien und zwischen den 20-Meterlinien eine Teamzone eingerichtet werden. Diese ist für den ausschließlichen Bedarf von Ersatzspielern und anderen Personen bestimmt, die zu einem Team gehören. Zwischen den 20Meterlinien soll eine durchgehende Coaching Line gezogen werden. Diese soll sich ca. 2 m außerhalb der Seitenlinie befinden und ist ausschließlich für Coaches markiert (Regel 9.2.5). Außerhalb der Teamzone soll die Coaching Line bis zu den Goallines durch eine gestrichelte Linie verlängert werden. In dieser so zwischen Seitenlinie und Coaching Line entstandenen Zone sollen die Ketten-Crew und der Downanzeiger arbeiten.\n\tb) Die Personen, die sich in der Teamzone aufhalten dürfen, sind auf die Teammitglieder in vollständiger Ausrüstung und maximal 60 weitere Personen, die zum Spielbetrieb beitragen, begrenzt. Alle Personen in der Teamzone unterliegen den Regeln und müssen den Anordnungen der Schiedsrichter Folge leisten (Regel 1.1.6). „Vollständige Ausrüstung“ bedeutet, gemäß den deutschen American Football Regeln & Interpretationen ausgerüstet (Regel 1.4.4) und spielbereit zu sein.\n\tc) Den Coaches ist der Aufenthalt in der Coaching Box (siehe Anhang A), die zwischen Teamzone und Coaching Line innerhalb der 20-Meterlinien gebildet wird, gestattet.\n\td) Es darf sich kein Rundfunk- oder TV-Personal, inklusive Journalisten, in der Teamzone oder Coaching Box aufhalten. Das gilt auch für deren Ausrüstung. Diesem Personenkreis ist es auch verboten, mit den Personen innerhalb der Teamzone in irgendeiner Form zu kommunizieren. In Stadien,in denen sich die Teamzone bis zu den Zuschauertribünen erstreckt, muss eine Durchgangszone eingerichtet werden, die es Medienvertretern möglich macht, auf beiden Seiten des Spielfeldes von einem Ende zum anderen zu gelangen.\n\te) Das Heimteam-Management soll Personen entfernen, die nicht berechtigt sind, sich in den Teamzonen aufzuhalten.\n\tf) Kick-Netze, die während des Spieles zum Üben benutzt werden, sind außerhalb der Teamzone verboten (Ausnahme: In Stadien, in denen der bauliche Zustand begrenzt ist, sind Netze, Holder und Kicker außerhalb der Teamzone und Grenzlinien erlaubt.) (Regel 9.2.1.b.1)."
interpretations: []
