src/snapshots/afrotd__parser__tests__rule_1.2.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 2
  - 5
title: Tore (Goals)
text: "\ta) Jedes Tor muss aus zwei senkrecht stehenden, gelben oder weißen, 9 m hohen Pfosten bestehen, die mit einer gelben oder weißen horizontalen Querlatte verbunden sind, deren Oberkante sich mindestens 2,4 m und höchstens 3 m über dem Boden befindet. Die Pfosten und die Querlatte müssen sich auf bzw. über der Endlinie befinden. Jedes Tor befindet sich im Aus.\n\tb) Über der Querlatte sollen die Pfosten weiß oder gelb sein und von den Innenseiten gemessen zwischen 5,6 m und 7,4 m auseinander stehen.\n\tc) An den Pfosten und der Querlatte dürfen keine dekorativen Materialien befestigt sein. (Ausnahme: An den oberen Enden der Pfosten sind 10x100 cm große, rote oder orange Wimpel erlaubt, die die Windrichtung anzeigen.)\n\td) Die Höhe der Querlatte wird von deren Oberkante bis zum Boden gemessen.\n\te) Die Pfosten müssen vom Boden ab bis zu einer Höhe von 1,8 m mit einer mindestens 10 cm dicken, elastischen Polsterung bedeckt sein.\n\tf) Das Heimteam ist dafür verantwortlich, dass transportable Tore vorhanden sind."
interpretations: []
